--- a/web/nav/templates/nav/nav.html
+++ b/web/nav/templates/nav/nav.html
@@ -21,11 +21,9 @@
       </li>
       {% endif %}
       {% if perms.appraisal.add_appraisal %}
-      <!--
       <li class="nav-item">
-        <a class="nav-link" href="/evaluation/">Tasadores</a>
+        <a class="nav-link" href="/export/">Exportar</a>
       </li>
-      -->
       {% endif %}
       {% if perms.user.view_accounting %}
       <li class="nav-item">
