--- a/web/list/templates/list/appraisals.html
+++ b/web/list/templates/list/appraisals.html
@@ -8,6 +8,7 @@
   ajax_assign_tasador_url = "{% url 'ajax_assign_tasador_url' %}";
   ajax_unassign_tasador_url = "{% url 'ajax_unassign_tasador_url' %}";
   ajax_assign_visador_url = "{% url 'ajax_assign_visador_url' %}";
+  ajax_unassign_visador_url = "{% url 'ajax_unassign_visador_url' %}";
   ajax_accept_appraisal_url = "{% url 'ajax_accept_appraisal_url' %}";
   ajax_reject_appraisal_url = "{% url 'ajax_reject_appraisal_url' %}";
   ajax_validate_cliente_url = "{% url 'ajax_validate_cliente_url' %}"
@@ -29,11 +30,13 @@
 {% load custom_tags %}
 
 {% for item in appraisals %}
-  {% if "asignador" in groups or "visador" in groups or user.is_superuser %}
+  {% for group in groups %}
+  {% if group in item.groups or user.is_superuser %}
     {% with item=item table=item.id %}
       {% include "list/appraisals_card.html" %}
     {% endwith %}
   {% endif %}
+  {% endfor %}
 {% endfor %}
 
 <script src="{% static 'list/js/tools.js' %}" type="text/javascript"></script>
@@ -66,19 +69,35 @@
     assignTableActions()
   });
 
-</script>
-
-<script>
-     //Handles the click true/false value of the appraisal evaluation form
+  // Handles the click true/false value of the appraisal evaluation form
+  $('#modal_evaluate').on('hidden.bs.modal', function (e) {
+    // When the evaluation modal is closed, we replace the button to be colored.
+    var appraisal_id = $("#in_appraisal_id").val();
+    var url = "{% url 'ajax_evaluate_modal_close_url' %}";
+    var form = $('#evaluate_form')
+    $.ajax({
+      url: url,
+      type: 'post',
+      data: form.serialize(),
+      error: function () {
+        alert("Error al cerrar la bitacora.");
+        return false;
+      },
+      success: function (data) {
+        replaceRow('table_sent',appraisal_id,data)
+        assignTableActions()
+      }
+    });
+    return false;
+  })
 
   $('#evaluateAppraisal input').on('click',function(){
-      var id = $(this).val();
-      if (id == 'False'){
+    var id = $(this).val();
+    if (id == 'False') {
       $(this).val('True');
-      }
-      else {
+    } else {
       $(this).val('False');
-      }
+    }
   });
 </script>
 
