--- a/web/list/templates/list/index.html
+++ b/web/list/templates/list/index.html
@@ -3,11 +3,13 @@
 {% block title %}Tasador{% endblock %}
 {% load static %}
 {% block head %}
-  <link rel="stylesheet" href="{% static 'list/css/main.css' %}">
+  {% load static %}
   <link rel="stylesheet" href="{% static 'list/css/modals_expenses.css' %}">
-  <link rel="stylesheet" href="{% static 'list/css/table_search.css' %}">
+  <link rel="stylesheet" href="{% static 'list/css/table.css' %}">
   <link rel="stylesheet" href="{% static 'logbook/css/logbook.css' %}">
   <link rel="stylesheet" href="{% static 'appraisal/css/modals.css' %}">
+  <link rel="stylesheet" href="{% static 'list/css/main.css' %}">
+  <link rel="stylesheet" href="{% static 'list/css/modals.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -18,15 +20,7 @@
 
   {% show_header "Tasaciones" %}
 
-  {% if appraisals_returned %}
-    <div class="alert alert-warning alert-dismissible fade show mb-1" role="alert">
-      {% if appraisals_returned|length == 1 %}
-      Hay una tasación para ser reconsiderada
-      {% else %}
-      Hay {{ appraisals_returned|length }} tasaciones para ser reconsideradas
-      {% endif %}
-    </div>
-  {% endif %}
+  {% include "list/notifications.html" %}
 
   {% include "list/appraisals.html" %}
 
@@ -35,29 +29,9 @@
 </div>
 
 <script>
-
-    $('#modal_evaluate').on('hidden.bs.modal', function (e) {
-      // When the evaluation modal is closed, we replace the button to be colored.
-      var appraisal_id = $("#in_appraisal_id").val();
-      var url = "{% url 'ajax_evaluate_modal_close_url' %}";
-      var form = $('#evaluate_form')
-      $.ajax({
-        url: url,
-        type: 'post',
-        data: form.serialize(),
-        error: function () {
-          alert("Error al cerrar la bitacora.");
-          return false;
-        },
-        success: function (data) {
-          replaceRow('table_sent',appraisal_id,data)
-          assignTableActions()
-        }
-      });
-      return false;
-    })
-
-    $("#urls").data()
-  </script>
+  $(document).ready(function($) {
+    $('#modal_logbook').on('hidden.bs.modal', logbookClose)
+  });
+</script>
 
 {% endblock %}
